<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/numberTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#94acd3"
        android:padding="10dp"
        android:layout_gravity="end"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/amount"
        android:textAlignment="textEnd"
        android:textSize="50sp" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:alignmentMode="alignMargins"
        android:textAlignment="center"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberTV"
        tools:context=".MainActivity">

        <Button
            android:width="90dp"
            android:minWidth="20dp"
            android:text="@string/one"
            android:textSize="20sp" />

        <Button
            android:width="90dp"
            android:text="@string/two"
            android:textSize="20sp" />

        <Button
            android:width="90dp"
            android:text="@string/three"
            android:textSize="20sp" />

        <Button
            android:width="100dp"
            android:text="@string/ac"
            android:textSize="20sp" />

        <Button
            android:text="@string/four"
            android:textSize="20sp" />

        <Button
            android:text="@string/five"
            android:textSize="20sp" />

        <Button
            android:text="@string/six"
            android:textSize="20sp" />

        <Button
            android:width="100dp"
            android:text="@string/division" />

        <Button
            android:text="@string/seven"
            android:textSize="20sp" />

        <Button
            android:text="@string/eight"
            android:textSize="20sp" />

        <Button
            android:text="@string/nine"
            android:textSize="20sp" />

        <Button
            android:width="100dp"
            android:text="@string/x"
            android:textSize="20sp" />

        <Button
            android:text="@string/cero"
            android:textSize="20sp" />

        <Button
            android:text="@string/dot"
            android:textSize="20sp" />

        <Button
            android:text="@string/plus"
            android:textSize="20sp" />

        <Button
            android:width="100dp"
            android:text="@string/equal"
            android:textSize="20sp" />

    </GridLayout>
</android.support.constraint.ConstraintLayout>